--- a/ui/package.json
+++ b/ui/package.json
@@ -1,13 +1,42 @@
 {
+  "name": "ui",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "@googlemaps/js-api-loader": "^1.13.10",
+    "@googlemaps/react-wrapper": "^1.1.28",
+    "@googlemaps/typescript-guards": "^1.0.11",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "autoprefixer": "^10.4.4",
+    "classnames": "^2.3.1",
+    "daisyui": "^2.13.3",
+    "date-fns": "^2.28.0",
+    "fast-equals": "^3.0.0",
+    "google-map-react": "^2.1.10",
+    "gray-matter": "^4.0.3",
+    "next": "12.1.0",
+    "postcss": "^8.4.12",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.9.1",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "sass": "^1.49.9",
+    "tailwindcss": "^3.0.23"
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.48.3",
+    "@types/node": "17.0.22",
+    "@types/react": "17.0.41",
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "typescript": "4.6.2"
   }
 }
