--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "@types/express-session": "^1.17.3",
     "@types/jest": "^24.0.25",
     "@types/mongodb": "^3.5.34",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.10",
+    "@types/uuid": "^8.3.4",
     "bcrypt": "^5.0.0",
     "connect-mongodb-session": "^2.4.1",
     "express": "^4.17.1",
@@ -53,6 +55,8 @@
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.3",
-    "multiparty-express": "^0.1.9"
+    "multer": "^1.4.4",
+    "multiparty-express": "^0.1.9",
+    "uuid": "^8.3.2"
   }
 }
