--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-number-format": "^4.9.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
