--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
+    "@ngneat/falso": "^4.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/connect-mongodb-session": "^2.4.0",
     "@types/express": "^4.17.9",
