--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "test": "npx mocha -r ts-node/register 'src/models/*.test.ts'",
-    "start": "ts-node src/server.ts"
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
