--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@googlemaps/typescript-guards": "^1.0.11",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@types/next-auth": "^3.15.0",
     "autoprefixer": "^10.4.4",
     "classnames": "^2.3.1",
     "daisyui": "^2.13.3",
@@ -22,6 +23,8 @@
     "google-map-react": "^2.1.10",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
+    "next-session": "^4.0.4",
     "postcss": "^8.4.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
