--- a/ui/.env.development
+++ b/ui/.env.development
@@ -2,3 +2,4 @@ NEXTAUTH_URL=http://localhost:3001/
 GITHUB_ID=2dc5a79a77cebc2b8355
 GITHUB_SECRET=fd0cb6917cb8460169659eb864e5e7700dcb51cd
 NEXTAUTH_SECRET=bP12jAPWzc9KReWvQBsx74Bv5eDN577b5MnIQzfNlY8=
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
