--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/express-handlebars": "^3.1.0",
     "@types/express-session": "^1.17.3",
     "@types/jest": "^24.0.25",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongodb": "^3.5.34",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.10",
@@ -57,6 +58,7 @@
     "express-flash": "^0.0.2",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^9.2.2",
     "mongodb": "^3.6.3",
     "multer": "^1.4.4",
