--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
     "react-number-format": "^4.9.1",
+    "react-toastify": "^8.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sass": "^1.49.9",
