--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "next": "12.1.0",
     "next-auth": "^4.3.1",
     "next-session": "^4.0.4",
+    "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
