--- a/ui/package.json
+++ b/ui/package.json
@@ -32,6 +32,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
     "react-number-format": "^4.9.1",
+    "react-rating": "^2.0.5",
     "react-toastify": "^8.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
